force-app/main/default/objects/EstimateTemplate__c/EstimateTemplate__c.object-meta.xml
<CustomObject>
    <label>Estimate Template</label>
    <nameField>
        <label>Estimate Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimate Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>