force-app/main/default/objects/EstimateTemplate__c/fields/ServiceId__c.field-meta.xml
<CustomField>
    <fullName>ServiceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.ProductId__c</field>
            <operation>equals</operation>
            <valueField>Product2.AssociatedProductId__c</valueField>
        </filterItems>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>Service</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Estimate Templates</relationshipLabel>
    <relationshipName>ServiceEstimateTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>