force-app/main/default/objects/EstimateTemplate__c/fields/UseProjectPhases__c.field-meta.xml
<CustomField>
    <fullName>UseProjectPhases__c</fullName>
    <defaultValue>false</defaultValue>
    <description
	>When enabled, estimate templates will use Project Phases as their top level grouping item rather than Activity Groups</description>
    <label>Use Project Phases</label>
    <type>Checkbox</type>
</CustomField>